# grond

./: .coveragerc  .drone.yml  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  Docu_start.md  LICENSE  MANIFEST.in  README-dev.md  README.md  examples  requirements.txt  setup.cfg  setup.py
apps/: grond
docker/: build_docker_images.sh
docker/docs/: Dockerfile
docker/fat-util/: Dockerfile
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: .config_example_static.yaml.swp  config_example_static.yaml  config_example_waveforms.yaml
examples/grond-playground-regional/: README.md
extras/: grond
maintenance/: deploy-docs.sh
maintenance/docker/: build_docker_images.sh
maintenance/drone/: deploy-docs.sh  matterpost.py
maintenance/pip/: readme.rst  upload.sh  upload_wheels.sh
src/: __init__.py  cmt.py  config.py  core.py  dataset.py  double_dc.py  environment.py  info.py  meta.py  monit.py  monitor.py  plot.py  problems.py  qc.py  run_info.py  scenario.py  stats.py  synthetic_tests.py  targets.py  toy.py  upgrade.py  version.py
src/analysers/: __init__.py  base.py
src/apps/: __main__.py  cmd_init.py  grond.py
src/baraddur/: __init__.py  meta.py  problem.yaml  server.py
src/clustering/: __init__.py  dbscan.py  metrics.py
test/: __init__.py  combine_misfits-v1.2.0.npz  common.py  test.conf  test_clustering.py  test_commands.py  test_examples.py  test_locate.py  test_multisource.py  test_optimiser.py  test_path.py  test_problem.py  test_rstate_manager.py  test_scenario.py  test_util.py
(+211 files in other folders)
