[metadata]
description-file=README.md
license-file=LICENSE

[bdist_wheel]
universal=1

[build_ext]
inplace=0

[nosetests]
verbosity=2
detailed-errors=1
#with-coverage=0
#cover-erase=1
#cover-package=grond

[coverage:report]
exclude_lines =
    def __repr__
    def __str__
    raise AssertionError
    raise NotImplementedError
    raise ValueError
    raise
    if __name__ == .__main__.:
    logger.error
